--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/text-to-speech": "^5.5.0",
     "@ionic/angular": "^4.1.0",
     "cordova-plugin-camera": "4.0.3",
     "core-js": "^2.5.4",
@@ -59,7 +60,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-tts": {}
     }
   }
 }
