--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/camera": "^5.4.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/native-audio": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/text-to-speech": "^5.5.0",
     "@ionic/angular": "^4.1.0",
+    "brython": "^3.7.1",
+    "cordova-android": "8.0.0",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-nativeaudio": "3.0.9",
     "core-js": "^2.5.4",
+    "python": "0.0.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -41,10 +46,16 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.4.0",
-    "@types/node": "~10.14.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.14.2",
     "codelyzer": "~4.5.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
@@ -61,7 +72,19 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
-      "cordova-plugin-tts": {}
-    }
+      "cordova-plugin-tts": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-nativeaudio": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
