--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@ionic/angular": "^4.1.0",
     "brython": "^3.7.1",
     "cordova-android": "8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-nativeaudio": "3.0.9",
     "core-js": "^2.5.4",
     "python": "0.0.4",
     "rxjs": "~6.3.3",
+    "speak-tts": "^2.0.8",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -84,7 +86,8 @@
       "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
